<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DEFCON</string>
    <string name="defcon_one">1</string>
    <string name="defcon_two">2</string>
    <string name="defcon_three">3</string>
    <string name="defcon_four">4</string>
    <string name="defcon_five">5</string>
    <string name="changelog">Changelog</string>
    <string name="settings">Settings</string>
    <string name="setting_notif">Enable Notifications</string>
    <string name="setting_notif_desc">If checked, a notification will remain in the task bar reminding you of what Defense Condition you are in.</string>
	<string name="pop_notif">Notifications</string>
	<string name="pop_notif_info">By default this application has a persistent notification of your current Defense Condition. To change this, go to the Settings.</string>
	<string name="defcon_one_pop">Defcon 1</string>
	<string name="defcon_two_pop">Defcon 2</string>
	<string name="defcon_three_pop">Defcon 3</string>
	<string name="defcon_four_pop">Defcon 4</string>
	<string name="defcon_five_pop">Defcon 5</string>
	<string name="defcon_one_info">Instability has taken over and remained. All operations halted or destroyed. Everything is lost. SAVE WHAT YOU CAN AND GET OUT.</string>
	<string name="defcon_two_info">Instability has taken over. All operations halted in order to re-establishe stability. Everything is on the line. STOP EVERYTHING AND RESTORE STABILITY.</string>
	<string name="defcon_three_info">Instability is present and has the capability of taking over at any moment. Operations are still underway but are at great risk. REMAIN VIGILANT.</string>
	<string name="defcon_four_info">Instability is present but supressed. At risk operations are halted. Not too much can go wrong. REMAIN ALERT.</string>
	<string name="defcon_five_info">Stability is present. There is no instability in sight. All operations continue as usual. Remain ALERT</string>
	<string name="about">About</string>
	<string name="about_pop_info">DEFCON is an application for keeping a Defense Condition on your life. There is little use for this app, except to keep a running tabs on the condition of your projects and operations. Long press each Defense Condition for more information about it.</string>
	<string name="reselect">Reselect</string>
	<string name="reselect_info">You must reselect the Defense Condition in order for the changes to apply.</string>
	<string name="log">DEFCON Log</string>
	<string name="save_sd">Save Log</string>
	<string name="coming_soon">Coming soon(…, &#8230;) ?</string>
	<string name="save_info">Saves the log text file to root of your SD Card. Warning: overwrites old log.</string>
	<string name="extras">Extras</string>
	<string name="save">Save</string>
	<string name="doit">Do it</string>
	<string name="nevermind">Nevermind</string>
	<string name="save_loc">Are you sure? It will overwrite any previous log you have saved.</string>
	<string name="clear_log">Clear Log</string>
	<string name="setting_alarm">Enable Alarm</string>
	<string name="setting_alarm_desc">If checked, an alarm will sound with each setting of your defense condition.</string>
	<string name="alarm">Alarm</string>
	<string name="alert">Alert</string>
	<string name="blackops">BlackOps</string>
	<string name="choose_prompt">Choose a sound:</string>
	<string name="sample">Sample</string>
	<string name="choose_sound">Choose Sound</string>
	<string name="delete_dialog">Are you sure you want to delete all DEFCON History?</string>
	<string name="current">Current DEFCON</string>

    
</resources>