<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/settings_menu_item"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="always|withText" ></item>
    <item
        android:id="@+id/log_menu_item"
        android:title="@string/log"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:showAsAction="always|withText" ></item>
    <item
        android:id="@+id/changelog_menu_item"
        android:title="@string/changelog"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:showAsAction="never" ></item>
    <item
        android:id="@+id/about_menu_item"
        android:title="@string/about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="ifRoom|withText" ></item>
	</menu>